--- a/r2-go/config.yml
+++ b/r2-go/config.yml
@@ -1,5 +1,6 @@
-models:
-- app-type: fs strings
-service-type: bin_sec_str
-- app-type: ij
-service-type: bin_info
+r2commands:
+    - cmd: "fs strings; fj"
+      idx: "idx_strings"
+
+    - cmd: "ij"
+      idx: idx_binary_info
